--- a/environments/Vagrantfile
+++ b/environments/Vagrantfile
@@ -25,9 +25,9 @@ Vagrant.configure("2") do |config|
     # within the machine from a port on the host machine. In the example below,
     # accessing "localhost:8080" will access port 80 on the guest machine.
     # NOTE: This will enable public access to the opened port
-   config.vm.network "forwarded_port", guest: 8080, host: 8080
-   config.vm.network "forwarded_port", guest: 8000, host: 80
-   config.vm.network "forwarded_port", guest: 5000, host: 5000
+    config.vm.network "forwarded_port", guest: 8080, host: 8081
+    config.vm.network "forwarded_port", guest: 8000, host: 8000
+    config.vm.network "forwarded_port", guest: 5000, host: 8083
     
    
     # Create a forwarded port mapping which allows access to a specific port
@@ -52,7 +52,7 @@ Vagrant.configure("2") do |config|
     config.vm.synced_folder "../", "/project_data"
 
     config.vm.provider "virtualbox" do |v|
-        v.name = "Buzzerboy_Portal_Template"
+        v.name = "Buzzerboy_Portal_Template1"
     end    
 
     # Provider-specific configuration so you can fine-tune various
@@ -103,6 +103,8 @@ Vagrant.configure("2") do |config|
     sudo apt-get install build-essential libssl-dev libffi-dev python-dev -y
     sudo apt install gettext -y
     
-    sudo ln -s /usr/bin/python3 /usr/bin/python
+    if [ ! -L /usr/bin/python ]; then
+      sudo ln -s /usr/bin/python3 /usr/bin/python
+    fi
         SHELL
 end
